// src/services/GameClient.ts - Version compl√®te avec corrections

import { GrpcWebFetchTransport } from '@protobuf-ts/grpcweb-transport';
import { SessionServiceClient } from '../generated/session_service.client';
import { GameServiceClient } from '../generated/game_service.client';
import {
    CreateSessionRequest,
    JoinSessionRequest,
    SetReadyRequest,
    GetSessionStateRequest
} from '../generated/session_service';
import {
    MakeMoveRequest,
    GetAvailableMovesRequest,
    StartTurnRequest,
    GetGameStateRequest
} from '../generated/game_service';
import type { GameState } from '../generated/common';

export class GameClient {
    private sessionClient: SessionServiceClient;
    private gameClient: GameServiceClient;
    private transport: GrpcWebFetchTransport;
    private debugEnabled = false; // ‚úÖ DEBUG D√âSACTIV√â - Trop de spam dans les logs

    constructor() {
        this.transport = new GrpcWebFetchTransport({
            baseUrl: 'http://localhost:50051',
            fetchInit: {
                mode: 'cors',
                credentials: 'omit'
            },
            format: "binary",
            compress: false,
            timeout: 10000,
            meta: {
                'content-type': 'application/grpc-web+proto',
                'accept': 'application/grpc-web+proto'
            }
        });

        this.sessionClient = new SessionServiceClient(this.transport);
        this.gameClient = new GameServiceClient(this.transport);

        this.debugLog('üîå GameClient initialis√© (version compl√®te)');
    }

    // üîß AJOUT: Helper de debug
    private debugLog(message: string, data?: any) {
        if (this.debugEnabled) {
            console.log(`üîç GameClient: ${message}`, data || '');
        }
    }

    // ============================================================================
    // M√âTHODES GESTION DE SESSION (avec debug am√©lior√©)
    // ============================================================================

    async createSession(playerName: string, gameMode: string = "multiplayer") {
        this.debugLog('üìù createSession D√âBUT', { playerName, gameMode });

        try {
            const request: CreateSessionRequest = {
                playerName: playerName,
                maxPlayers: 4,
                gameMode: gameMode
            };

            this.debugLog('üì§ Envoi createSession request', request);
            const { response } = await this.sessionClient.createSession(request);
            this.debugLog('üì• createSession response re√ßue', response);

            if (response.result.oneofKind === "success") {
                const success = response.result.success;
                this.debugLog('‚úÖ createSession SUCCESS', {
                    sessionCode: success.sessionCode,
                    sessionId: success.sessionId,
                    playerId: success.playerId
                });

                return {
                    success: true,
                    sessionCode: success.sessionCode,
                    sessionId: success.sessionId,
                    playerId: success.playerId,
                    sessionState: success.player ? {
                        sessionId: success.sessionId,
                        players: [success.player],
                        currentPlayerId: success.playerId,
                        state: 0,
                        boardState: "{}",
                        turnNumber: 0
                    } as GameState : undefined
                };
            } else if (response.result.oneofKind === "error") {
                this.debugLog('‚ùå createSession ERROR', response.result.error);
                return {
                    success: false,
                    error: response.result.error.message
                };
            }

            this.debugLog('‚ùå createSession INVALID RESPONSE');
            return {
                success: false,
                error: "R√©ponse invalide du serveur"
            };
        } catch (error) {
            this.debugLog('üí• createSession EXCEPTION', error);
            return {
                success: false,
                error: this.extractErrorMessage(error)
            };
        }
    }

    async joinSession(sessionCode: string, playerName: string) {
        this.debugLog('üö™ joinSession D√âBUT', { sessionCode, playerName });

        try {
            const request: JoinSessionRequest = {
                sessionCode: sessionCode.toUpperCase(),
                playerName: playerName
            };

            this.debugLog('üì§ Envoi joinSession request', request);
            const { response } = await this.sessionClient.joinSession(request);
            this.debugLog('üì• joinSession response re√ßue', response);

            if (response.result.oneofKind === "success") {
                const success = response.result.success;
                this.debugLog('‚úÖ joinSession SUCCESS', {
                    sessionId: success.sessionId,
                    playerId: success.playerId
                });

                return {
                    success: true,
                    sessionCode: sessionCode,
                    sessionId: success.sessionId,
                    playerId: success.playerId,
                    sessionState: success.gameState
                };
            } else if (response.result.oneofKind === "error") {
                this.debugLog('‚ùå joinSession ERROR', response.result.error);
                return {
                    success: false,
                    error: response.result.error.message
                };
            }

            this.debugLog('‚ùå joinSession INVALID RESPONSE');
            return {
                success: false,
                error: "R√©ponse invalide du serveur"
            };
        } catch (error) {
            this.debugLog('üí• joinSession EXCEPTION', error);
            return {
                success: false,
                error: this.extractErrorMessage(error)
            };
        }
    }

    // üîß CORRIG√â: setPlayerReady avec validation renforc√©e
    async setPlayerReady(sessionId: string, playerId: string) {
        this.debugLog('‚ö° setPlayerReady D√âBUT - VALIDATION');
        this.debugLog('  üìã sessionId', sessionId);
        this.debugLog('  üìã playerId', playerId);

        // üîç Validation ultra-stricte (comme dans la version debug)
        if (!sessionId) {
            this.debugLog('‚ùå sessionId is falsy', sessionId);
            return { success: false, error: 'sessionId is required' };
        }
        if (!playerId) {
            this.debugLog('‚ùå playerId is falsy', playerId);
            return { success: false, error: 'playerId is required' };
        }
        if (typeof sessionId !== 'string') {
            this.debugLog('‚ùå sessionId is not string', typeof sessionId);
            return { success: false, error: 'sessionId must be string' };
        }
        if (typeof playerId !== 'string') {
            this.debugLog('‚ùå playerId is not string', typeof playerId);
            return { success: false, error: 'playerId must be string' };
        }

        try {
            const request: SetReadyRequest = {
                sessionId: sessionId,
                playerId: playerId,
                ready: true
            };

            this.debugLog('üì§ Envoi setReady request', request);
            const { response } = await this.sessionClient.setReady(request);
            this.debugLog('üì• setReady response re√ßue', response);

            if (response.success) {
                this.debugLog('‚úÖ setReady SUCCESS', { gameStarted: response.gameStarted });
                return {
                    success: true,
                    gameStarted: response.gameStarted
                };
            } else if (response.error) {
                this.debugLog('‚ùå setReady SERVER ERROR', response.error);
                return {
                    success: false,
                    error: response.error.message
                };
            }

            this.debugLog('‚ùå setReady INVALID RESPONSE FORMAT');
            return {
                success: false,
                error: "√âchec de la requ√™te"
            };
        } catch (error) {
            this.debugLog('üí• setReady EXCEPTION', error);
            return {
                success: false,
                error: this.extractErrorMessage(error)
            };
        }
    }

    async getSessionState(sessionId: string) {
        // Log l√©ger pour √©viter le spam pendant le polling
        this.debugLog('üìä getSessionState', { sessionId: sessionId?.substring(0, 8) + '...' });

        try {
            const request: GetSessionStateRequest = {
                sessionId: sessionId
            };

            const { response } = await this.sessionClient.getSessionState(request);

            if (response.gameState) {
                return {
                    success: true,
                    sessionState: response.gameState
                };
            } else if (response.error) {
                this.debugLog('‚ùå getSessionState ERROR', response.error);
                return {
                    success: false,
                    error: response.error.message
                };
            }

            return {
                success: false,
                error: "Aucun √©tat de session retourn√©"
            };
        } catch (error) {
            this.debugLog('üí• getSessionState EXCEPTION', error);
            return {
                success: false,
                error: this.extractErrorMessage(error)
            };
        }
    }

    async leaveSession(sessionId: string, playerId: string) {
        this.debugLog('üö™ leaveSession', { sessionId, playerId });
        try {
            return { success: true };
        } catch (error) {
            this.debugLog('üí• leaveSession EXCEPTION', error);
            return {
                success: false,
                error: this.extractErrorMessage(error)
            };
        }
    }

    // ============================================================================
    // üé≤ NOUVELLES M√âTHODES GAMEPLAY - gRPC UNIQUEMENT (avec debug)
    // ============================================================================

    // üé≤ D√©marrer un nouveau tour (tire une tuile al√©atoire)
    async startNewTurn(sessionId: string) {
        this.debugLog('üé≤ startNewTurn D√âBUT', { sessionId });

        try {
            const request: StartTurnRequest = {
                sessionId: sessionId
            };

            this.debugLog('üì§ Envoi startTurn request', request);
            const { response } = await this.gameClient.startTurn(request);
            this.debugLog('üì• startTurn response re√ßue', response);

            if (response.success) {
                this.debugLog('‚úÖ startTurn SUCCESS', {
                    announcedTile: response.announcedTile,
                    turnNumber: response.turnNumber
                });

                return {
                    success: true,
                    announcedTile: response.announcedTile,
                    tileImage: response.tileImage,
                    turnNumber: response.turnNumber,
                    waitingForPlayers: response.waitingForPlayers,
                    gameState: response.gameState
                };
            } else if (response.error) {
                this.debugLog('‚ùå startTurn ERROR', response.error);
                return {
                    success: false,
                    error: response.error.message
                };
            }

            return {
                success: false,
                error: "√âchec du d√©marrage du tour"
            };
        } catch (error) {
            this.debugLog('üí• startTurn EXCEPTION', error);
            return {
                success: false,
                error: this.extractErrorMessage(error)
            };
        }
    }

    // üéØ Jouer un mouvement (position sur le plateau)
    async makeMove(sessionId: string, playerId: string, position: number) {
        this.debugLog('üéØ makeMove D√âBUT', { sessionId, playerId, position });

        try {
            const request: MakeMoveRequest = {
                sessionId: sessionId,
                playerId: playerId,
                moveData: `{"position":${position}}`,
                timestamp: BigInt(Date.now())
            };

            this.debugLog('üì§ Envoi makeMove request', request);
            const { response } = await this.gameClient.makeMove(request);
            this.debugLog('üì• makeMove response re√ßue', response);

            if (response.result.oneofKind === "success") {
                const success = response.result.success;
                this.debugLog('‚úÖ makeMove SUCCESS', {
                    pointsEarned: success.pointsEarned,
                    isGameOver: success.isGameOver
                });

                return {
                    success: true,
                    pointsEarned: success.pointsEarned,
                    mctsResponse: success.mctsResponse,
                    turnCompleted: true,
                    isGameOver: success.isGameOver,
                    finalScores: "{}",
                    newGameState: success.newGameState || {}
                };
            } else if (response.result.oneofKind === "error") {
                this.debugLog('‚ùå makeMove ERROR', response.result.error);
                return {
                    success: false,
                    error: response.result.error.message
                };
            }

            return {
                success: false,
                error: "√âchec du mouvement"
            };
        } catch (error) {
            this.debugLog('üí• makeMove EXCEPTION', error);
            return {
                success: false,
                error: this.extractErrorMessage(error)
            };
        }
    }
// Ajoutez cette m√©thode dans votre classe GameClient
    private safeStringify(obj: any): string {
        if (!obj) return '{}';

        try {
            return JSON.stringify(obj, (key, value) => {
                // Convertir BigInt en string pour √©viter l'erreur
                if (typeof value === 'bigint') {
                    return value.toString();
                }
                return value;
            });
        } catch (error) {
            // Si √ßa plante encore, conversion simple en string
            return String(obj);
        }
    }
    // üìä Obtenir l'√©tat du gameplay
    async getGameplayState(sessionId: string) {
        this.debugLog('üìä getGameplayState', { sessionId });

        try {
            const request: GetGameStateRequest = {
                sessionId: sessionId
            };

            const { response } = await this.gameClient.getGameState(request);

            if (response.success) {
                return {
                    success: true,
                    gameState: response.gameState,
                    currentTile: response.currentTile,
                    currentTileImage: response.currentTileImage, // ‚úÖ NOUVEAU CHAMP!
                    currentTurn: response.currentTurn,
                    waitingForPlayers: response.waitingForPlayers,
                    isGameFinished: response.isGameFinished,
                    finalScores: response.finalScores
                };
            } else if (response.error) {
                this.debugLog('‚ùå getGameplayState ERROR', response.error);
                return {
                    success: false,
                    error: response.error.message
                };
            }

            return {
                success: false,
                error: "√âchec de r√©cup√©ration de l'√©tat"
            };
        } catch (error) {
            this.debugLog('üí• getGameplayState EXCEPTION', error);
            return {
                success: false,
                error: this.extractErrorMessage(error)
            };
        }
    }
    async getGameState(sessionId: string) {
        this.debugLog('üéÆ getGameState DIRECT', { sessionId });

        try {
            const request: GetGameStateRequest = {
                sessionId: sessionId
            };

            const { response } = await this.gameClient.getGameState(request);

            if (response.success) {
                this.debugLog('‚úÖ getGameState SUCCESS', {
                    currentTile: response.currentTile,
                    currentTileImage: response.currentTileImage, // ‚úÖ Log pour debug
                    currentTurn: response.currentTurn,
                    isGameFinished: response.isGameFinished
                });

                return {
                    success: true,
                    gameState: response.gameState,
                    currentTile: response.currentTile,
                    currentTileImage: response.currentTileImage, // ‚úÖ EXPOS√â!
                    currentTurn: response.currentTurn,
                    waitingForPlayers: response.waitingForPlayers,
                    isGameFinished: response.isGameFinished,
                    finalScores: response.finalScores
                };
            } else if (response.error) {
                this.debugLog('‚ùå getGameState ERROR', response.error);
                return {
                    success: false,
                    error: response.error.message
                };
            }

            return {
                success: false,
                error: "√âchec de r√©cup√©ration de l'√©tat de jeu"
            };
        } catch (error) {
            this.debugLog('üí• getGameState EXCEPTION', error);
            return {
                success: false,
                error: this.extractErrorMessage(error)
            };
        }
    }
    // üéØ Obtenir les mouvements disponibles
    async getAvailableMoves(sessionId: string, playerId: string) {
        this.debugLog('üéØ getAvailableMoves', { sessionId, playerId });

        try {
            const request: GetAvailableMovesRequest = {
                sessionId: sessionId,
                playerId: playerId
            };

            const { response } = await this.gameClient.getAvailableMoves(request);

            if (!response.error) {
                return {
                    success: true,
                    availableMoves: response.availableMoves
                };
            } else {
                this.debugLog('‚ùå getAvailableMoves ERROR', response.error);
                return {
                    success: false,
                    error: response.error.message
                };
            }
        } catch (error) {
            this.debugLog('üí• getAvailableMoves EXCEPTION', error);
            return {
                success: false,
                error: this.extractErrorMessage(error)
            };
        }
    }

    // ============================================================================
    // M√âTHODES UTILITAIRES (am√©lior√©es)
    // ============================================================================

    private extractErrorMessage(error: any): string {
        this.debugLog('üîç extractErrorMessage input', error);

        if (error?.message) {
            return error.message;
        }
        if (typeof error === 'string') {
            return error;
        }
        return 'Erreur de connexion au serveur';
    }

    // üîß NOUVEAU: Contr√¥le du debug
    setDebugEnabled(enabled: boolean) {
        this.debugEnabled = enabled;
        this.debugLog(`üîß Debug ${enabled ? 'activ√©' : 'd√©sactiv√©'}`);
    }

    // üîß NOUVEAU: Test de connectivit√©
    async testConnection() {
        this.debugLog('üîß Test de connectivit√©');
        try {
            // Test simple avec une session inexistante
            await this.getSessionState('test-connection-123');
            return { success: true, note: 'Server reachable' };
        } catch (error: any) {
            // Si on re√ßoit "SESSION_NOT_FOUND", c'est que la connexion fonctionne
            if (error.message && error.message.includes('SESSION_NOT_FOUND')) {
                return { success: true, note: 'Server reachable (test session not found)' };
            }
            return { success: false, error: this.extractErrorMessage(error) };
        }
    }

    dispose() {
        this.debugLog('üîå GameClient disposed');
    }
}

// Instance singleton
export const gameClient = new GameClient();