// services/GameStateManager.ts - VERSION CORRIGÃ‰E AVEC COMPARAISON
import type {GameState as ProtoGameState, Player as ProtoPlayer} from '../generated/common';
import type {GameState, Player} from '../hooks/useGameState';

/**
 * Service pour la gestion et conversion des Ã©tats de jeu
 * Centralise les utilitaires dispersÃ©s dans le composant principal
 */
export class GameStateManager {

    // âœ… CACHE POUR Ã‰VITER LES MISES Ã€ JOUR INUTILES
    private static lastPlateauTilesHash = '';
    private static lastAvailablePositionsHash = '';

    /**
     * Convertir l'Ã©tat de session reÃ§u du backend vers le format local
     */
    static convertSessionState(sessionState: ProtoGameState): GameState {
        // âœ… SUPPRESSION DES LOGS POUR Ã‰VITER POLLUTION CONSOLE PENDANT POLLING
        // console.log('ðŸ” DEBUG convertSessionState - sessionState:', sessionState);
        // console.log('ðŸ” DEBUG convertSessionState - gameMode depuis proto:', sessionState.gameMode);

        const gameState = {
            sessionCode: sessionState.sessionId || '',
            state: sessionState.state,
            players: sessionState.players.map((p: ProtoPlayer) => ({
                id: p.id,
                name: p.name,
                score: p.score,
                isReady: p.isReady,
                isConnected: p.isConnected,
                joinedAt: p.joinedAt.toString()
            })),
            boardState: sessionState.boardState || '{}',
            currentTurn: sessionState.currentPlayerId,
            gameMode: sessionState.gameMode || 'multiplayer' // ðŸ”¥ AJOUT DU GAMEMMODE !
        };

        // console.log('ðŸ” DEBUG convertSessionState - gameState converti:', gameState);
        return gameState;
    }

    /**
     * ðŸš€ FONCTION UTILITAIRE POUR GÃ‰NÃ‰RER UN HASH
     */
    private static generateHash(data: any): string {
        try {
            return JSON.stringify(data);
        } catch (e) {
            return String(data);
        }
    }

    /**
     * âœ… METTRE Ã€ JOUR LES PLATEAUX AVEC COMPARAISON
     */
    static updatePlateauTiles(
        gameState: any,
        setPlateauTiles: (tiles: { [playerId: string]: string[] }) => void,
        setAvailablePositions: (positions: number[]) => void,
        session: () => { playerId: string } | null,
    ) {
        if (gameState.player_plateaus) {
            const newPlateauTiles: { [playerId: string]: string[] } = {};

            Object.entries(gameState.player_plateaus).forEach(([playerId, plateau]: [string, any]) => {
                newPlateauTiles[playerId] = plateau.tile_images || [];
            });

            // âœ… COMPARAISON AVANT MISE Ã€ JOUR
            const newPlateauHash = this.generateHash(newPlateauTiles);

            if (newPlateauHash !== this.lastPlateauTilesHash) {
                this.lastPlateauTilesHash = newPlateauHash;
                setPlateauTiles(newPlateauTiles);
            }
        }

        // âœ… MÃŠME LOGIQUE POUR LES POSITIONS DISPONIBLES
        const currentSession = session();
        if (currentSession && gameState.waiting_for_players?.includes(currentSession.playerId)) {
            const myPlateau = gameState.player_plateaus?.[currentSession.playerId];
            if (myPlateau) {
                const newPositions = myPlateau.available_positions || [];
                const newPositionsHash = this.generateHash(newPositions);

                if (newPositionsHash !== this.lastAvailablePositionsHash) {
                    this.lastAvailablePositionsHash = newPositionsHash;
                    setAvailablePositions(newPositions);
                }
            }
        } else {
            // Reset positions si plus mon tour
            const emptyPositionsHash = this.generateHash([]);
            if (emptyPositionsHash !== this.lastAvailablePositionsHash) {
                this.lastAvailablePositionsHash = emptyPositionsHash;
                setAvailablePositions([]);
            }
        }
    }

    /**
     * âœ… VERSION VIEWER AVEC LOGS RÃ‰DUITS AUSSI
     */
    static updatePlateauTilesForViewer(
        gameState: any,
        setPlateauTiles: (tiles: {[playerId: string]: string[]}) => void,
        setAvailablePositions: (positions: number[]) => void,
        session: () => { playerId: string } | null,
    ) {
        console.log('ðŸ‘ï¸ VIEWER DEBUG: Fonction appelÃ©e', { gameState, session: session() });

        if (gameState.player_plateaus) {
            console.log('ðŸ‘ï¸ VIEWER DEBUG: player_plateaus trouvÃ©', gameState.player_plateaus);

            const currentSession = session();
            if (currentSession && currentSession.playerId.includes('viewer')) {
                console.log('ðŸ‘ï¸ VIEWER DEBUG: Session viewer confirmÃ©e', currentSession.playerId);

                const mctsPlateau = gameState.player_plateaus?.['mcts_ai'];
                console.log('ðŸ‘ï¸ VIEWER DEBUG: Plateau MCTS', mctsPlateau);

                if (mctsPlateau) {
                    const newPlateauTiles = { 'mcts_ai': mctsPlateau.tile_images || [] };
                    console.log('ðŸ‘ï¸ VIEWER DEBUG: Nouveau plateau MCTS', newPlateauTiles);

                    // âœ… COMPARAISON POUR VIEWER AUSSI
                    const newPlateauHash = this.generateHash(newPlateauTiles);

                    if (newPlateauHash !== this.lastPlateauTilesHash) {
                        console.log('ðŸ‘€ VIEWER: plateau MCTS mis Ã  jour!', newPlateauTiles);
                        this.lastPlateauTilesHash = newPlateauHash;
                        setPlateauTiles(newPlateauTiles);
                    }

                    // Positions pour viewer
                    const newPositions = mctsPlateau.available_positions || [];
                    const newPositionsHash = this.generateHash(newPositions);

                    if (newPositionsHash !== this.lastAvailablePositionsHash) {
                        this.lastAvailablePositionsHash = newPositionsHash;
                        setAvailablePositions(newPositions);
                    }

                    return;
                }
            }

            // âœ… FALLBACK - Logique normale avec comparaison
            this.updatePlateauTiles(gameState, setPlateauTiles, setAvailablePositions, session);
        }
    }

    /**
     * ðŸš€ MISE Ã€ JOUR OPTIMISTE POUR RÃ‰ACTIVITÃ‰ IMMÃ‰DIATE
     */
    static updatePlateauTilesOptimistic(
        position: number,
        currentTile: string,
        plateauTiles: () => {[playerId: string]: string[]},
        setPlateauTiles: (tiles: {[playerId: string]: string[]}) => void,
        session: () => { playerId: string } | null,
        currentTileImage?: string
    ) {
        const currentSession = session();
        if (!currentSession) return;

        const currentPlateaus = plateauTiles();
        const playerPlateau = currentPlateaus[currentSession.playerId] || [];

        // CrÃ©er nouveau plateau avec la tuile placÃ©e optimistiquement
        const newPlayerPlateau = [...playerPlateau];
        
        // Utiliser l'image si fournie, sinon gÃ©nÃ©rer Ã  partir du nom de tuile
        const tileImageToUse = currentTileImage || `../image/${currentTile.replace('-', '')}.png`;
        newPlayerPlateau[position] = tileImageToUse;

        const newPlateaus = {
            ...currentPlateaus,
            [currentSession.playerId]: newPlayerPlateau
        };

        setPlateauTiles(newPlateaus);
    }

    /**
     * âœ… FONCTION POUR RESET LE CACHE (quand on change de session)
     */
    static resetCache() {
        // console.log('ðŸ§¹ RESET GAMESTATE CACHE'); // Log dÃ©sactivÃ©
        this.lastPlateauTilesHash = '';
        this.lastAvailablePositionsHash = '';
    }

    /**
     * Ouvrir une session MCTS dans une nouvelle fenÃªtre
     */
    static openMctsSession(session: () => { sessionCode: string } | null) {
        const currentSession = session();
        if (!currentSession) return;

        // CrÃ©er un viewer spÃ©cialisÃ© pour voir le plateau MCTS
        const mctsUrl = `${window.location.origin}${window.location.pathname}?` +
            `sessionCode=${currentSession.sessionCode}&` +
            `playerId=mcts_viewer&` +
            `playerName=${encodeURIComponent('ðŸ” MCTS Viewer')}&` +
            `mode=mcts_view`;

        window.open(mctsUrl, '_blank', 'width=1200,height=800');
    }

    /**
     * Gestion de l'auto-connexion via paramÃ¨tres URL et mode single-player
     */
    static handleAutoConnection(
        setPlayerName: (name: string) => void,
        setSessionCode: (code: string) => void,
        joinSession: () => Promise<void>
    ) {
        const urlParams = new URLSearchParams(window.location.search);
        const sessionCode = urlParams.get('sessionCode');
        const playerId = urlParams.get('playerId');
        const playerName = urlParams.get('playerName');
        const mode = urlParams.get('mode');

        // Mode viewer spÃ©cifique (viewer normal et mcts_view)
        if (sessionCode && playerId && playerName && (mode === 'viewer' || mode === 'mcts_view')) {
            setPlayerName(decodeURIComponent(playerName));
            setSessionCode(sessionCode);

            setTimeout(async () => {
                try {
                    await joinSession();
                    console.log(`ðŸ” ${mode === 'mcts_view' ? 'MCTS Viewer' : 'Viewer'} connectÃ© Ã  la session ${sessionCode}`);
                } catch (error) {
                    console.error(`âŒ Erreur connexion ${mode}:`, error);
                }
            }, 1000);
            return;
        }

        // ðŸŽ® AUTO-CONNEXION DÃ‰SACTIVÃ‰E - Utiliser le sÃ©lecteur de mode
        // La sÃ©lection de mode se fait maintenant via l'interface GameModeSelector
        if (!sessionCode && !mode) {
            console.log('ðŸŽ® SÃ©lection de mode activÃ©e - pas d\'auto-connexion');
        }
    }

    /**
     * Gestion du cache d'images avec verrouillage
     */
    static updateImageCache(
        currentTile: () => string | null,
        currentTileImage: () => string | null,
        lastTileHash: () => string,
        setImageCache: (cache: string | null) => void,
        setLastTileHash: (hash: string) => void,
    ) {
        const tile = currentTile();
        const image = currentTileImage();

        if (tile && image) {
            const hash = `${tile}-${image}`;
            if (hash !== lastTileHash()) {
                setImageCache(image);
                setLastTileHash(hash);
            }
        }
    }
}